try to fix the button size on mobile

--- a/style.css
+++ b/style.css
@@ -182,10 +182,10 @@ p {
     }
 
     .btn {
-        height: 4em;
+        height: 3em;
         font-family: var(--font-f1);
         font-size: 2em;
-        margin: 10% 20% 20% 0%;
+        margin: 10% 10% 10% 0%;
         border-radius: 2em;
     }
 
